2012-06-08  David Reveman  <reveman@chromium.org>

        [Chromium] Compositor doesn't support translucent root layers.
        https://bugs.webkit.org/show_bug.cgi?id=87821

        Reviewed by James Robinson.

        * chromium/public/WebLayer.h:
        (WebLayer):
        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):

2012-06-06  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move createMessagePortChannel to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85764

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::createMessagePortChannel):
        * chromium/public/WebMessagePortChannel.h: Added.
        (WebKit):
        (WebMessagePortChannel):
        (WebKit::WebMessagePortChannel::~WebMessagePortChannel):
        * chromium/public/WebMessagePortChannelClient.h: Added.
        (WebKit):
        (WebMessagePortChannelClient):
        (WebKit::WebMessagePortChannelClient::~WebMessagePortChannelClient):

2012-06-05  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move createLocalStorageNamespace to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85766

        Reviewed by James Robinson.

        Part of a refactoring series. See tracking bug 82948.
        
        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::createLocalStorageNamespace):
        * chromium/public/WebStorageArea.h: Added.
        (WebKit):
        (WebStorageArea):
        (WebKit::WebStorageArea::~WebStorageArea):
        (WebKit::WebStorageArea::setItem):
        (WebKit::WebStorageArea::removeItem):
        (WebKit::WebStorageArea::clear):
        * chromium/public/WebStorageNamespace.h: Added.
        (WebKit):
        (WebStorageNamespace):